...
    }
    
    // MARK: - Lifecycle Methods
    override func viewDidLoad() {
        super.viewDidLoad()
        
        self.title = "Pokemons"
        setupTableView()
        bindViewModel()
        viewModel.loadPokemons()
        
        pullToRefreshComponent = PullToRefreshComponent()
        pullToRefreshComponent?.setup(with: tableView, target: self, action: #selector(refreshData))
...
            .store(in: &cancellables)
    }
    
    private func setupTableView() {
        tableView.register(type: PokemonTableViewCell.self)
        tableView.separatorStyle = .none
        tableView.accessibilityIdentifier = "PokemonsTableView"
        tableView.dataSource = self
        tableView.delegate = self
    }

    @objc func refreshData() {
        pullToRefreshComponent?.endRefreshing()
...
